welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:11: error: ')' expected but string literal found.
else if (litMessag e== "R") {
                       ^BDRBuggle:31: error: illegal start of simple expression
	}
        ^