welcome.lessons.welcome.bdr.BDR.scala.code
if (litMessage()== "A") {
	avance();
}
else if (litMessage() == "B") {
	avance(); avance()
}
else if (litMessage() == "C") {
	avance(); avance(); avance();
}
else if (litMessag e== "R") {
	droite();
}
else if (litMessage == "L") {
	gauche();
}
else if (litMessage == "I") {
	gauche(); gauche(); avance();
}
else if (litMessage == "Z") {
	recule();
}
else if (litMessage == "Y") {
	recule(); recule();
}
else (litMessage == "X") {
	recule(); recule(); recule() 
}
